--- a/application.css
+++ b/application.css
@@ -422,7 +422,8 @@ ul.options-list li.highlighted {
     margin: 0 auto;
 	padding: 0;
 	list-style: none;
-	position: relative;
+// 	position: relative;
+    display: flex;
 	text-align: center;
 }
 #primary_nav ul .menu_item {
