--- a/application.css
+++ b/application.css
@@ -422,8 +422,8 @@ ul.options-list li.highlighted {
     margin: 0 auto;
 	padding: 0;
 	list-style: none;
-// 	position: relative;
-    display: flex;
+	position: relative;
+
 	text-align: center;
 }
 #primary_nav ul .menu_item {
