--- a/application.css
+++ b/application.css
@@ -573,6 +573,7 @@ footer {
         margin: 0;
         // max-width: 282px; 
         max-width: 202px;
+        background: #fff;
         img {
             max-width: 100%;
         }
