Northgate Shopping Centre 1.0  /application.css

--- a/application.css
+++ b/application.css
@@ -85,7 +85,7 @@ $line: #EFEFEF;
 $social: #000;
 $link: #000;
 
-$font_family: 'Raleway', 'Helvetica', 'Arial', sans-serif;
+$font_family: 'SofiaPro-Light', 'Helvetica', 'Arial', sans-serif;
 
 [v-cloak] {
     display: none!important;
