--- a/application.css
+++ b/application.css
@@ -770,6 +770,11 @@ footer {
         right: 0;
         bottom: 0;
         left: 0;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        
         &::after {
             content: "";
             position: absolute;
