Northgate Shopping Centre 1.0  /application.css

--- a/application.css
+++ b/application.css
@@ -776,7 +776,12 @@ footer {
         align-items: center;
         h3 {
             text-transform: uppercase;
+            color: #fff;
         }
+        i {
+            color: #fff;
+        }
+        
         
         &::after {
             content: "";
