--- a/application.css
+++ b/application.css
@@ -783,17 +783,17 @@ footer {
         }
         
         
-        &::after {
-            content: "";
-            position: absolute;
-            bottom: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            transform-origin: bottom center;
-            background: transparent;
-            transition: all 0.3s ease;
-        }
+        // &::after {
+        //     content: "";
+        //     position: absolute;
+        //     bottom: 0;
+        //     left: 0;
+        //     width: 100%;
+        //     height: 100%;
+        //     transform-origin: bottom center;
+        //     background: transparent;
+        //     transition: all 0.3s ease;
+        // }
     }
     .feature_item_content {
         padding: 60px 8%;
