--- a/application.css
+++ b/application.css
@@ -776,7 +776,8 @@ footer {
         display: flex;
         flex-direction: column;
         justify-content: center;
-        align-items: center;
+        align-items: center
+        z-index: 5;
         h3 {
             text-transform: uppercase;
             color: #fff;
